[metadata]
name = recoverydharma.website.tools
author = Sean Kelly
author_email = kelly@seankelly.biz
description = Tools to help maintain the Recovery Dharma website
license = Creative Commons Attribution-ShareAlike 4.0 International
keywords = website, tools, utilities, recovery, addiction, buddhism
version = file: src/recoverydharma/website/tools/VERSION.txt
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development


[options]
include_package_data = True
zip_safe = True
package_dir =
    = src
packages = find_namespace:
python_requires = >= 3.9
install_requires =


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    rd-csv = recoverydharma.website.tools.csv:main


[options.package_data]
* = *.csv


[options.extras_require]
dev =
